--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,13 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'com.google.firebase:firebase-analytics:19.0.1'
+    implementation 'com.google.firebase:firebase-database:20.0.2'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+
     implementation 'com.lorentzos.swipecards:library:1.0.9'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
